# aliasx

./: .aliasx.yaml  .gitignore  Cargo.toml  README.md
.github/workflows/: create_release.yml  pull_request.yml
aliasx-cli/: Cargo.toml
aliasx-cli/src/: cli.rs  lib.rs  main.rs
aliasx-core/: Cargo.toml
aliasx-core/src/: aliases.rs  config_generator.rs  executor.rs  history.rs  input.rs  input_mapping.rs  lib.rs  task_collection.rs  task_conditions.rs  task_filter.rs  task_reader.rs  tasks.rs  validator.rs
aliasx-tui/: Cargo.toml
aliasx-tui/src/: fuzzy.rs  lib.rs  session.rs  task_fuzzy.rs  widgets.rs
docs/: README.md
docs/features/: 01-installation.md  02-basic.md  03-inputs.md  04-mappings.md  05-scope.md  06-cli.md  07-tui.md  08-validation.md  09-conditions.md  10-history.md  11-config-generator.md
scripts/: create_release.sh
src/: aliases.rs  cli.rs  input.rs  input_mapping.rs  main.rs  pid.rs  task_collection.rs  tasks.rs  validator.rs  vscode_tasks_parser.rs
src/cli/: cli.rs
src/vscode_tasks/: parser.rs
