[package]
name = "aliasx-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
execute = "0.2.13"
indexmap = { version="2.12.1", features = ["serde"] }
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
regex = "1.12.2"
serde = { version="1.0.228", features = ["derive"] }
serde_json5 = "0.2.1"
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
